finished adding teams, and final logo. Added php and json files and am ready to begin work on javascript

--- a/game.html
+++ b/game.html
@@ -52,6 +52,19 @@
        		<div class="col-md-2">
        			<img src="img/vikings.png" height="125px"></div>
        	</div>
+       	<br />
+       	<div class="row">
+       		<div class="col-md-2">
+       			<img src="img/redskins.png" height="125px"></div>
+       		<div class="col-md-2">
+       			<img src="img/eagles.png" height="125px"></div>
+       		 <div class="col-md-2">
+       			<img src="img/jets.png" height="125px"></div>
+       		<div class="col-md-2">
+       			<img src="img/jaguars.png" height="125px"></div>
+       		<div class="col-md-2">
+       			<img src="img/nfl.png" height="125px"></div>
+       	</div>
     
 
        		
