--- a/game.html
+++ b/game.html
@@ -1,70 +1,91 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
-	<title>Click man, Click!</title>
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+  <title>Click man, Click!</title>
 </head>
+
 <body>
-	<div style="text-align:center;">
-		<button class="btn btn-primary" onclick="countdown()">Begin the Clickathon!</button></div>
-	<h2>Click the Sports Teams!</h2>
-	<h4> After clicking the start button, click as many of the team logos as you can in 20 seconds! Good luck!!</h4>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-2">
-       			<img src="img/giants.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/patriots.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/saints.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/seahawks.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/lions.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       	</div>
-       	<br />
-       	<div class="row">
-       		<div class="col-md-2">
-       			<img src="img/bears.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/panthers.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		 <div class="col-md-2">
-       			<img src="img/bills.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/ravens.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/falcons.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       	</div>
-       	<br />
-       	<div class="row">
-       		<div class="col-md-2">
-       			<img src="img/bengals.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/broncos.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		 <div class="col-md-2">
-       			<img src="img/dolphins.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/packers.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/vikings.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       	</div>
-       	<br />
-       	<div class="row">
-       		<div class="col-md-2">
-       			<img src="img/redskins.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/eagles.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		 <div class="col-md-2">
-       			<img src="img/jets.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/jaguars.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       		<div class="col-md-2">
-       			<img src="img/nfl.png" height="125px" onclick="countup(); this.onclick=null"></div>
-       	</div>
+<div style="text-align:center;">
+  <button class="btn btn-primary" onclick="countdown()">Begin the Clickathon!</button>
+</div>
+<h2>Click the Sports Teams!</h2>
+<h4> After clicking the start button, click as many of the team logos as you can in 20 seconds! Good luck!!</h4>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2">
+      <img src="img/giants.png" height="125px" onclick="countup(); this.onclick=null">
     </div>
-<script type="text/javascript" src="js/clickGame.js"></script>
+    <div class="col-md-2">
+      <img src="img/patriots.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/saints.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/seahawks.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/lions.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+  </div>
+  <br />
+  <div class="row">
+    <div class="col-md-2">
+      <img src="img/bears.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/panthers.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/bills.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/ravens.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/falcons.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+  </div>
+  <br />
+  <div class="row">
+    <div class="col-md-2">
+      <img src="img/bengals.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/broncos.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/dolphins.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/packers.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/vikings.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+  </div>
+  <br />
+  <div class="row">
+    <div class="col-md-2">
+      <img src="img/redskins.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/eagles.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/jets.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/jaguars.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+    <div class="col-md-2">
+      <img src="img/nfl.png" height="125px" onclick="countup(); this.onclick=null">
+    </div>
+  </div>
+</div>
+<script type="text/javascript" src="js/countdown.js"></script>
 </body>
 </html>
